working student_management update modal but view individual student not yet

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -146,3 +146,11 @@ td, th {
     margin-left: 230px;
     margin-top: 10px;
 }
+
+td p {
+    display: inline;
+}
+
+#oldIdNum{
+    display: none;
+}
