functiong CRUD for student_management

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -151,6 +151,16 @@ td p {
     display: inline;
 }
 
-#oldIdNum{
+.hidden{
     display: none;
+}
+
+label {
+    font-size: large;
+    font-weight: bold;
+    color: black;
+}
+
+#existIndicator {
+    color: red;
 }
