--- a/public/css/main.css
+++ b/public/css/main.css
@@ -105,6 +105,7 @@ button:hover {
     margin: 10% auto;
     width: 80%;
     height: 70%;
+    overflow-y: auto;
     animation-name: modalOpen;
     animation-duration: 0.5s;
 }
@@ -183,8 +184,6 @@ td p {
 }
 
 .hidden{
-    color: green;
-    text-align: left;
     display: none;
 }
 
@@ -208,5 +207,6 @@ label {
 } 
 
 .delete {
+    font-weight: bold;
     color: red;
 }
