--- a/public/css/main.css
+++ b/public/css/main.css
@@ -195,15 +195,36 @@ label {
 
 #existIndicator {
     color: red;
+    display: none;
+    background-color: black;
+    margin-top: 0px;
+    text-align: center;
 }
+
+h2 {
+    margin: 0px;
+}
+
 #enrolledIndicator {
     color: red;
+    display: none;
+    background-color: black;
+    margin-top: 0px;
+    text-align: center;
 }
 #confirmIndicator{
     color: red;
+    display: none;
+    background-color: black;
+    margin-top: 0px;
+    text-align: center;
 }
 #fullIndicator{
     color: red;
+    display: none;
+    background-color: black;
+    margin-top: 0px;
+    text-align: center;
 } 
 
 .delete {
@@ -266,4 +287,12 @@ input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-i
  
 input[type="number"] {
     -moz-appearance: textfield;
+}
+
+.backMain {
+    color: gray;
+}
+
+.backMain:hover {
+    color: red;
 }
