working ajax crud for student management

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -200,7 +200,7 @@ label {
     color: black;
 }
 
-#existIndicator {
+.existIndicator {
     color: red;
     display: none;
     background-color: black;
