changed colors for indicators

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -249,6 +249,12 @@ h2 {
     text-align: center;
 } 
 
+#wrongIndicator, #searchIndicator, #loginIndicator {
+    color: red;
+}
+
+
+
 .delete {
     font-weight: bold;
     color: red;
